# alias-game

./: .env.example  .gitignore  API.md  ARCHITECTURE.md  CLAUDE.md  DEPLOYMENT.md  GEMINI.md  README.md  README_E2E_TESTS.md  TROUBLESHOOTING.md  docker-compose.yml  nx.json  package-lock.json  package.json
.github/workflows/: ci.yml
.husky/: pre-push
backend/: .gitignore  Cargo.toml  Dockerfile  README.md  project.json  test-room-join.md
backend/crates/api-gateway/: Cargo.toml
backend/crates/api-gateway/src/: auth_middleware.rs  error.rs  game.rs  lib.rs  main.rs  rooms.rs  test_utils.rs  websocket.rs
backend/crates/api-gateway/src/websocket/: game.rs
backend/crates/api-gateway/tests/: integration_tests.rs  simple_integration_tests.rs  test_helpers.rs  websocket_tests.rs
backend/crates/auth-service/: Cargo.toml
backend/crates/auth-service/src/: jwt.rs  lib.rs  twitch.rs  user.rs
backend/crates/game-engine/: Cargo.toml
backend/crates/game-engine/src/: game.rs  lib.rs  scoring.rs  team.rs
backend/crates/shared/: Cargo.toml
backend/crates/shared/src/: errors.rs  lib.rs  models.rs  types.rs
frontend/: .dockerignore  Dockerfile  angular.json  eslint.config.js  nginx.conf  package-lock.json  package.json  playwright.config.ts  project.json  proxy.conf.json  room-join-test-guide.md  tailwind.config.js  tsconfig.json
frontend/e2e/: room-capacity.spec.ts  simple-auth.spec.ts
frontend/e2e/fixtures/: auth-helper.ts  mock-auth.ts  room-helper.ts  test-users.ts
frontend/e2e/setup/: global-setup.ts  global-teardown.ts
frontend/src/: index.html  styles.css
frontend/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
frontend/src/app/core/components/: connection-status.component.ts  header.component.ts  index.ts  layout.component.ts
frontend/src/app/core/guards/: auth.guard.ts
frontend/src/app/core/interceptors/: auth.interceptor.ts
frontend/src/app/core/services/: kick-notification.service.ts  theme.service.ts  websocket.service.ts
frontend/src/app/features/auth/: auth-callback.component.ts  auth.service.ts  oauth-modal.component.ts
frontend/src/app/features/game/: game.component.ts  game.routes.ts
frontend/src/app/features/game/game-play/: game-play.component.ts
frontend/src/app/features/game/team-selection/: team-selection.component.ts
frontend/src/app/features/home/: home.component.ts
frontend/src/app/features/lobby/: lobby.component.ts  room.service.ts
frontend/src/app/features/room/: kick-confirmation-modal.component.ts  kicked-player-modal.component.ts  room.component.ts  webcam-preview.component.ts
frontend/src/app/settings/: settings.component.css  settings.component.html  settings.component.spec.ts  settings.component.ts
frontend/src/app/shared/ui/: button.component.ts  card.component.ts  index.ts  modal.component.ts
frontend/src/app/shared/ui/badge/: badge.component.ts
tools/: kill-port.js
tools/containers/: project.json
tools/dev-stack/: project.json
tools/docker/: project.json
