[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# WebSocket
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
mongodb = "2.8"
redis = { version = "0.24", features = ["tokio-comp"] }

# Authentication
jsonwebtoken = "9"

# Internal crates
shared = { path = "../shared" }
auth-service = { path = "../auth-service" }

# Configuration
dotenv = "0.15"

# URL encoding
urlencoding = "2.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time and random
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

[dev-dependencies]
# Testing dependencies
hyper = "1.0"
tower = { version = "0.4", features = ["util"] }