[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Database
mongodb = { version = "2.8", features = ["bson-uuid-1"] }

# HTTP client (for error types)
reqwest = { version = "0.11", optional = true }

# JWT (for error types)
jsonwebtoken = { version = "9", optional = true }

[features]
default = ["reqwest", "jsonwebtoken"]